--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "dependencies": {
         "laravel-mix": "^6.0.49",
         "mix": "^0.0.1",
+        "toastr": "^2.1.4",
+        "vee-validate": "^2.2.15",
         "vue-axios": "^3.3.7",
-        "vue-toastification": "^1.7.14",
-        "vuex": "^3.6.2",
-        "vee-validate": "^2.2.15"
+        "vuex": "^3.6.2"
     }
 }
-
