--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "dependencies": {
         "laravel-mix": "^6.0.49",
         "mix": "^0.0.1",
+        "quill": "^2.0.2",
         "vee-validate": "^2.2.15",
         "vue-axios": "^3.3.7",
+        "vue-quill-editor": "^3.0.6",
         "vue-sweetalert2": "^5.0.11",
         "vue-toastification": "^1.7.14",
         "vuex": "^3.6.2"
