--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
         "webpack": "^5.94.0"
     },
     "dependencies": {
+        "base64-js": "^1.5.1",
+        "jspdf": "^2.5.2",
         "laravel-mix": "^6.0.49",
         "mix": "^0.0.1",
+        "qrcode": "^1.5.4",
         "quill": "^2.0.2",
         "vee-validate": "^2.2.15",
         "vue-axios": "^3.3.7",
