--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
         "vee-validate": "^2.2.15",
         "vue-axios": "^3.3.7",
         "vue-pagination-2": "^3.1.0",
-        "vue-quill-editor": "^3.0.6",
         "vue-sweetalert2": "^5.0.11",
         "vue-toastification": "^1.7.14",
+        "vue2-tinymce-editor": "^0.0.1",
         "vuex": "^3.6.2"
     }
 }
